Fixed phone and email alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,12 +28,14 @@ body{
 }
 
 #phone{
-    text-align: right;
+    /* text-align: right; */
+    text-align: center;
     font-size:20px;
 }
 
 #email{
-    text-align:left;
+    /* text-align:left; */
+    text-align:center;
     font-size:20px;
     align-items:center;
 }
